fix: word overflow for tasklist

--- a/src/Components/TasksCompleted.css
+++ b/src/Components/TasksCompleted.css
@@ -1,13 +1,14 @@
-.taskscompleted-area {
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap");
+.taskscompleted-card {
   position: absolute;
   background-color: lavender;
+  border: 3px solid #000000ad;
+  border-radius: 15px;
+  box-shadow: 15px 15px 50px 10px rgba(37, 36, 36, 0.822);
   padding: 15px;
   top: 45px;
   left: 530px;
   width: 400px;
-  border: 3px solid #000000ad;
-  box-shadow: 15px 15px 50px 10px rgba(37, 36, 36, 0.822);
-  border-radius: 15px;
 }
 .header-text {
   text-align: center;
@@ -23,4 +24,13 @@
 
 .text {
   text-align: center;
+}
+
+.taskmap {
+  padding: 10px;
+  border: 3px solid #000000ad;
+  border-radius: 10px;
+  overflow-wrap: break-word;
+  line-height: 1.5;
+  font-family: "Roboto Slab", serif;
 }
